2003-04-27 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in, docs/Makefile.am, docs/README.switcap, 
	examples/Makefile.am, examples/switchcap/, scheme/Makefile.am,
	scheme/gnet-switchcap, scripts/Makefile.am, scripts/sw2asc.in: 
	Integrated Dan McMahill's switcap backend

	* scheme/Makefile.am, scheme/gnet-spice-sdb.scm, src/gnetlist.c:
	Integrated Stuart Brorson's advanced spice backend.

2003-03-09 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-PCBboard.scm: Removed a "(false-if-exception  ...)
   	so that this backend works with guile 1.6.3.  Patch by Dan McMahill.

2003-02-20 Ales Hvezda   <ahvezda@geda.seul.org>

        * examples/vams/commonrc: Changed how the current directory
        variable is set (used "'s instead of ').

        * src/gnetlist.c: Applied patchlet from Steve Tell for disabling
        the guile 1.6.3 deprecated warnings.

        * README: Added note suggestion by Steve Tell about warning users
        that deprecated guile warnings are turned off.

2003-02-18 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Bumped version to 20030223

	* tests/singlenet.pads: Updated test file with new fixes to the pads
	backend.

2003-02-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Applied Gabriel Paubert's warning reducing patch with
        a few minor mods.

2003-01-26 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-pads.scm: Oops, managed to break the pads backend. 
	Fixed a "footprint" which really should have stayed at "pattern".

	* configure.in: Changed -fnative-struct to -mms-bitfields for 
	gcc 3.2 mingw compiler (older mingw compilers are no longer 
	supported)

2003-01-11 Ales Hvezda   <ahvezda@geda.seul.org>

	* Makefile.am: Fixed the distclean-local target.

2002-12-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/annotate.sh, unannotate.sh: Oops, forgot to change a bunch
	of uref= attributes to refdes=.  These scripts now work.

2002-11-30 Ales Hvezda   <ahvezda@geda.seul.org>
