@@ -1,0 +1,13 @@
+*********************************************************
+* Spice file generated by gnetlist                      *
+* spice-sdb version 3.31.2003 by SDB --                 *
+* provides advanced spice netlisting capability.        *
+* Documentation at http://www.brorson.com/gEDA/SPICE/   *
+*********************************************************
+Vcc 2 0 DC 12V
+Vin 1 0 DC 5V
+RB 2 1 47K 
+RE 4 0 4.7K 
+Q2 2 3 4 QM 
+Q1 2 1 3 QM 
+.END
