@@ -8,6 +8,8 @@
 	* scheme/Makefile.am, scheme/gnet-spice-sdb.scm, src/gnetlist.c:
 	Integrated Stuart Brorson's advanced spice backend.
 
+	* tests/: added some regression tests for the new backends
+
 2003-03-09 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* scheme/gnet-PCBboard.scm: Removed a "(false-if-exception  ...)
